# OpenCV_Planar_and_Pack_Image_Transformation

./: .gitignore  CMakeLists.txt  README  build_main_Jpg2PlanarBGR.sh  main.cpp  main_Jpg2PlanarBGR.cpp  run.sh  two_people_384x384.bgr  utils.cpp
images/: two_people_384x384_serialized.binary
include/: utils.h
src/: CMakeLists.txt  main.cpp  main_Jpg2PlanarBGR.cpp  utils.cpp
